--- a/index.ipynb
+++ b/index.ipynb
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code here \n",
-    "\n",
+    "from sklearn.datasets.samples_generator import make_blobs\n",
     "# Import other libs.\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
@@ -396,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
