Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = "
+    "X, y = make_blobs(n_samples=100, centers=)"
    ]
   },
   {
