Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,11 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make_blobs(n_samples=100, centers=)"
+    "X, y = make_blobs(n_samples=100, centers=3, n_features=2)"
    ]
   },
   {
