Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(dict)"
+    "df = pd.DataFrame(dict(x=X[:,0], y=X[:,1], label=y))"
    ]
   },
   {
