Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,13 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(dict(x=X[:,0], y=X[:,1], label=y))"
+    "df = pd.DataFrame(dict(x=X[:,0], y=X[:,1], label=y))\n",
+    "colors = {0:'red', 1:'blue', 2:'green'}\n",
+    "fig, ax = pyplot.subplots()\n",
+    "grouped = df.groupby('label')\n",
+    "for key, group in grouped:\n",
+    "    group.plot(ax=ax, kind='scatter', x='x', y='y', label=key, color=colors[key])\n",
+    "plt.show()"
    ]
   },
   {
