Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,11 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "from sklearn.datasets import make_moons\n",
+    "X, y = make_moons(n_samples=100, noise=0.1)"
    ]
   },
   {
