Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,11 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "from sklearn.datasets import make_circles\n",
+    "X, y = make_circles(n_samples=100, noise=0.05)"
    ]
   },
   {
